Added interspeech publication
Signed-off-by: Nithin Rao Koluguri <nkoluguri@nkoluguri-mlt.client.nvidia.com>

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <p align="center">
                 <name> Nithin Rao Koluguri</name>
               </p>
-              <p> As a Deep Learning Applied Scientist &#64; <a href="https://developer.nvidia.com/conversational-ai">  NVIDIA Conversational AI,</a> I work on developing speaker recognition, verification and diarization systems. My research interests include speech signal processing, natural language processing and machine learning.</p> 
+              <p> As a Senior Research Scientist &#64; <a href="https://developer.nvidia.com/conversational-ai">  NVIDIA Conversational AI,</a> I work on developing speaker recognition, verification and diarization systems. My research interests include speech signal processing, natural language processing and machine learning.</p> 
               <p>
                 I received my masters degree from University of Southern California (USC) with a major in Electrical and Computer Engineering. During my masters I carried out research through <a href="https://sail.usc.edu/">Signal Analysis and Interpretation Laboratory (SAIL)</a> where I was advised by <a href="https://sail.usc.edu/people/shri.html">Prof. Shrikanth Narayanan</a>.
 	      </p>
@@ -175,6 +175,26 @@
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           
+          <tr>
+            <!-- <td width="25%">
+              <div class="one"><img src='images/speakernet.png'></div>
+            </td> -->
+            <td valign="top" width="75%">
+              <a href="https://arxiv.org/abs/2203.15974">
+                <papertitle>Multi-scale Speaker Diarization with Dynamic Scale Weighting</papertitle>
+              </a>
+              <br>
+              Taejin Park, <strong> Nithin Rao Koluguri</strong>, Jagadeesh Balam, Boris Ginsburg
+              <br>
+              <br>
+              <em>International Speech Communication Association (Interspeech), 2022 </em>
+              <br>
+              <a href="https://github.com/NVIDIA/NeMo">project page</a>
+              <p></p>
+              <p> Advanced multi-scale diarization system based on a multi-scale diarization decoder. </p>
+            </td>
+          </tr>
+
           <tr>
             <!-- <td width="25%">
               <div class="one"><img src='images/speakernet.png'></div>
