--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 I received my masters degree from University of Southern California (USC) with a major in Electrical and Computer Engineering. During my masters I carried out research through <a href="https://sail.usc.edu/">Signal Analysis and Interpretation Laboratory (SAIL)</a> where I was advised by <a href="https://sail.usc.edu/people/shri.html">Prof. Shrikanth Narayanan</a>.
 	      </p>
               <p align=center>
-                <a href="mailto:nithinraok.koluguri@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:nithinrao.koluguri@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://drive.google.com/file/d/1SivSTm7iDPuI51_hierJan0wdScMmnzk/view">CV</a> &nbsp/&nbsp
                 <a href="https://www.github.com/nithinraok">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/nithinraok/"> LinkedIn </a> &nbsp/&nbsp
