--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
       border: 3px solid #555555; /* Mid-Grey border */
     }
 
+    /* Add text-align center to the header image cell */
+    .header-image {
+      text-align: center;
+    }
+
     /* Email/Links section */
     .contact-links p {
        text-align: center;
@@ -267,6 +272,19 @@
                   <a href="https://medium.com/@nithinraok_">Blog</a>
                 </p>
               </div>
+            </td>
+          </tr>
+        </table>
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td width="100%" valign="middle" class="content-padding">
+                <h2 class="heading">Featured In</h2>
+                <ul>
+                  <li><a href="https://developer.nvidia.com/blog/new-standard-for-speech-recognition-and-translation-from-the-nvidia-nemo-canary-model/">New Standard for Speech Recognition and Translation from the NVIDIA NeMo Canary Model</a></li>
+                  <li><a href="https://developer.nvidia.com/blog/pushing-the-boundaries-of-speech-recognition-with-nemo-parakeet-asr-models/">Pushing the Boundaries of Speech Recognition with NVIDIA NeMo Parakeet ASR Models</a></li>
+                  <li><a href="https://blogs.nvidia.com/blog/speech-ai-telugu-language-breakthrough/">Speech AI Expands Global Reach With Telugu Language Breakthrough</a></li>
+                </ul>
             </td>
           </tr>
         </table>
